Initial wizard coding completed.
Initial definition of the property, identification of number of rooms and the start of the wizards for identification of room items.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+Z_wip_backups/mids_prop_wizard.blade.php
+Z_wip_backups/mids_prop_wizard2.blade.php
+Z_wip_backups/PropertyController.php
+Z_wip_backups/web.php
