Support sample data incl API to create

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Z_wip_backups/mids_prop_wizard.blade.php
 Z_wip_backups/mids_prop_wizard2.blade.php
 Z_wip_backups/PropertyController.php
 Z_wip_backups/web.php
+nohup.out
